updated resume. Fixed broken css on progress bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/* -------------------------------------------Colours */
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color: #676767;
@@ -30,7 +30,7 @@
     background-color: #525252;
 }
 
-/* -------------------------------------------Special paddings/margins/text */
+/* ----------------------------------------Special paddings/margins/text */
 
 h1,
 h2,
@@ -52,6 +52,7 @@ h4 {
 .inline-block {
     display: inline-block;
 }
+
 .row-table {
     display: table;
 }
@@ -69,8 +70,7 @@ h4 {
     margin-bottom: 40px;
 }
 
-/* -------------------------------------------Heading */
-
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -116,13 +116,13 @@ header {
     font-size: 0;
 }
 
-#nav {
-    margin: 0;
-}
-
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
@@ -156,14 +156,14 @@ header {
     letter-spacing: 2px;
 }
 
-/* -------------------------------------------Hover.css */
+/*--------------------------------------------Hover.css*/
 
-.hvr-sweep-to-bottom::before {
-    background-color: rgba(0, 0, 0, 0.2);
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/* -------------------------------------------Footer */
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -179,7 +179,7 @@ footer {
     padding-left: 5px;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
-    -websit-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
 
@@ -203,7 +203,7 @@ footer {
     background: #8f8f8f;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
-    -websit-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
 
@@ -215,7 +215,7 @@ footer {
     padding: 20px;
 }
 
-/* -------------------------------------------Three Reasons */
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
@@ -226,7 +226,7 @@ footer {
     margin-bottom: 15px;
 }
 
-/* -------------------------------------------Personal Info */
+/* ----------------------------------------Personal Info */
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -238,7 +238,7 @@ footer {
 .personal-info-item .value {
     padding-right: 8px;
     display: inline-block;
-} 
+}
 
 .personal-info-item .key p,
 .personal-info-item .value p {
@@ -259,4 +259,25 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
+}
+
+/* ----------------------------------------Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
 }
